spade-tests/src/snapshots/spade_tests__typeinference__useful_error_if_indexing_backward_array.snap
---
source: spade-tests/src/typeinference.rs
---
entity name(x: inv &[bool; 10]) -> int<32> {
    x[0]
}


error: Index target must be an array, got inv &[bool; 10]
  ┌─ testinput:2:5
  │
1 │ entity name(x: inv &[bool; 10]) -> int<32> {
  │                --------------- Type inv &[bool; 10] inferred here
2 │     x[0]
  │     ^---
  │     │
  │     Type [_; _] inferred here
  │     Expected array
  │
  = note: Expected: [_; _]
               Got: inv &[bool; 10]
